Chrono now working, a basic Message struct created in common.

--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -14,7 +14,8 @@ common = { path="../common"}
 anyhow = ""
 serde = ""
 serde_derive = ""
-chrono = ""
+chrono = {features=["serde","wasmbind"]}
+bincode = ""
 
 [profile.release]
 # less code to include into binary
