--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,4 +14,5 @@ actix-rt =""
 actix-files = ""
 actix-web-actors = ""
 futures = ""
-chrono = ""
+chrono = {features=["serde","wasmbind"]}
+bincode = ""
