--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,12 +1,13 @@
-[package]
-name = "common"
-version = "0.1.0"
-authors = ["Ghislain PUTOIS <ghislain.putois@gmail.com>"]
-edition = "2018"
+	[package]
+	name = "common"
+	version = "0.1.0"
+	authors = ["Ghislain PUTOIS <ghislain.putois@gmail.com>"]
+	edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-serde=""
-serde_derive=""
-bimap={features = ["serde"]}
+	[dependencies]
+	serde=""
+	serde_derive=""
+	bimap={features = ["serde"]}
+	chrono = {features = ["serde","wasmbind"] }
