--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,7 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   id: 'rust-wasm'
   args: ['build', '--tag=eu.gcr.io/$PROJECT_ID/fullstack', '.']
+  timeout: 1200s
 
 images: ['eu.gcr.io/$PROJECT_ID/fullstack']
 tags: ['cloud-builders-custom']
